[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/ui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/SettingMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/Extra Days.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/item_frames/8.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/Comfy Feeling.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/graphics/backgrounds/coffee-brown-cream-chess-board-background-vector.jpg" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 512 )
margin_left = 72.5533
margin_right = 75.5763
margin_top = 72.5533
margin_bottom = 74.2303

[sub_resource type="DynamicFont" id=3]
size = 150
outline_size = 2
extra_spacing_char = 3
extra_spacing_space = 20
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = 6.0
margin_right = -4.0
margin_bottom = 6.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -483.0
margin_top = -510.0
margin_right = 344.0
margin_bottom = 486.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.737
anchor_right = 0.5
anchor_bottom = 0.737
margin_left = -211.0
margin_top = -161.28
margin_right = 211.0
margin_bottom = 161.72
custom_constants/separation = 40

[node name="StartButton" type="Button" parent="VBoxContainer" groups=["Button"]]
margin_right = 422.0
margin_bottom = 81.0
mouse_default_cursor_shape = 1
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Start game"

[node name="OptionButton" type="Button" parent="VBoxContainer" groups=["Button"]]
margin_top = 121.0
margin_right = 422.0
margin_bottom = 202.0
mouse_default_cursor_shape = 1
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer" groups=["Button"]]
margin_top = 242.0
margin_right = 422.0
margin_bottom = 323.0
mouse_default_cursor_shape = 1
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Exit Game"

[node name="StudentNo" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -147.0
margin_top = -42.0
custom_fonts/font = SubResource( 2 )
text = "P2204647"

[node name="SettingMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -923.0
margin_top = -5.4
margin_right = 923.0
margin_bottom = 372.0
rect_scale = Vector2( 0.691466, 0.691466 )
rect_pivot_offset = Vector2( 930.949, 179.46 )
custom_styles/panel = SubResource( 5 )

[node name="Title" type="Label" parent="Panel"]
anchor_left = 0.095
anchor_top = 0.285
anchor_right = 0.095
anchor_bottom = 0.285
margin_right = 1476.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 755.37, 80.3442 )
custom_fonts/font = SubResource( 3 )
text = "The Coin Puzzle"
align = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
